--- a/Grafos/style.css
+++ b/Grafos/style.css
@@ -22,7 +22,7 @@
 .buttonAbout{
     border: none;
     border-radius: 50px;
-    background-image: url("./imagenes//Acercade.png");
+    background-image: url("./imagenes/Acerca\ de.psd");
     background-repeat:no-repeat ;
 }
 
