--- a/style.css
+++ b/style.css
@@ -138,9 +138,27 @@
     /* background: linear-gradient(0deg rgba(6, 211, 215, 0.98), 65% rgb(0, 133, 140)); */
 }
 
-
+#text-area{
+    background: rgb(12, 136, 156);
+    color: whitesmoke;
+}
+.GtkTextView {
+    background-color: #f0f0f0;
+}
+.button-okay {
+    background: rgb(0, 124, 185);
+    color: whitesmoke;
+    font-size: 17px;
+    font-weight: 600;
+}
+.button-okay:hover {
+    background: rgb(224, 224, 224);
+    color: rgb(0, 124, 185);
+    font-size: 17px;
+    font-weight: 600;
+}
 #show-grapho {
-    background-image: url("./image/Fondo.png");
+    background-image: url("./image/fondo.png");
 }
 
 .buttonPlay {
@@ -169,4 +187,62 @@
 
     background: rgb(140, 0, 0);
 
+}
+
+.button {
+    background: rgba(1, 1, 1, 0);
+    color: whitesmoke;
+    /* box-shadow: 2px 2px 2px 10px rgba(0, 0, 0, 0.2); */
+    font-size: 20px;
+    transition: all 0.5s;
+    border-radius: 10%;
+    box-shadow: rgba(0, 0, 0, 0) 0px 19px 38px, rgba(0, 0, 0, 0) 0px 15px 12px;
+}
+
+#box {
+    /* background-image: linear-gradient(0deg, #03bb85, #256D7B); */
+    background-image: url("./image/Fondo.png");
+}
+
+.buttonAbout{
+    border: none;
+    border-radius: 50px;
+    background-image: url("./image/Acercade.png");
+    background-repeat:no-repeat ;
+}
+
+.buttonRoad{
+    border: none;
+    border-radius: 50px;
+    background-image: url("./image/Caminocorto.png");
+    background-repeat:no-repeat ;
+}
+
+
+
+.buttonOpen{
+    border: none;
+    border-radius: 50px;
+    background-image: url("./image//Abrir.png");
+    background-repeat:no-repeat ;
+}
+
+.buttonCreate{
+    border: none;
+    border-radius: 50px;
+    background-image: url("./image//Creargrapho.png");
+    background-repeat:no-repeat ;
+}
+
+.buttonExit {
+    border: none;
+    border-radius: 50px;
+    background-image: url("./image//Salir.png");
+    background-repeat:no-repeat ;
+
+}
+
+.button-box{
+
+    border: none; 
 }
