--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@
     transition: all 0.5s;
     border-radius: 10%;
     box-shadow: rgba(0, 0, 0, 0) 0px 19px 38px, rgba(0, 0, 0, 0) 0px 15px 12px;
+    background-position: center;
 }
 .buttonImage {
     background: rgba(1, 1, 1, 0);
@@ -218,8 +219,6 @@
     background-image: url("./image/Caminocorto.png");
     background-repeat:no-repeat ;
 }
-
-
 
 .buttonOpen{
     border: none;
