--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@
 #box {
     /* background-image: linear-gradient(0deg, #03bb85, #256D7B); */
     background-image: url("./image/Fondo.png");
+    background-repeat: no-repeat;
 }
 
 .buttonAbout{
@@ -230,7 +231,7 @@
 .buttonCreate{
     border: none;
     border-radius: 50px;
-    background-image: url("./image//Creargrapho.png");
+    background-image: url("./image//Crear\ grapho.png");
     background-repeat:no-repeat ;
 }
 
@@ -251,3 +252,38 @@
 
     border: none; 
 }
+.button-dijkstra {
+    background-image: url("./image/shortRoad.png");
+    background-repeat: no-repeat;
+}
+.button-box-dijkstra{
+    border: none;
+}
+#box-dijkstra {
+    background-image: url("./image/Fondocamino.png");
+}
+.label-dijkstra {
+    font-size: 22px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: rgb(0, 171, 171);
+}
+.button-camino {
+    font-size: 24px;
+    color: whitesmoke;
+    background: #256D7B;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
